
gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for libgeda 

Most recent changes are at the top of this file

2000-11-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_nethash.c: Added creation function (from 
	  gnetlist/src/s_traverse.c)

	* src/s_nethash.c: Renamed all functions to s_nethash_*

	* src/s_page.c: Put in the calls to destroy the nethash data structure
	  when a page is deleted

	* src/s_nethash.c: Added s_nethash_delete_all function

	* include/struct.h: Added conn_list function to st_nethash 

	* src/s_nethash.c: Added conn_list variable usage code 

	* src/s_stretch.c: Added code to check the uniqueness of midpoint
	  connections when they are added to the stretch structure

2000-11-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.h: Added st_stretch structure (and typdef)

	* src/s_stretch.c: Added file which will contain the low level
	  data structure for stretching/rubberbanding when a move occurs

	* include/struct.h: Added stretch_head to page structure

	* src/s_page.c: Added the init of stretch_head

	* include/struct.h: Fixed the misspelling of separator

2000-11-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.h: Added some variables the undo structure to hold
	  hierarchy state

	* src/s_undo.c: Put in code to use the above added variables

	* src/s_undo.c: Added the above variables to s_undo_add

	* src/u_basic.c: Oops, didn't allocate enough memory for a temp string
	  in u_basic_breakup_string.  Fixed. 

	* src/u_basic.c: Minor correct to malloc

2000-11-02  Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.h: Added some more gnetlist rc variables to toplevel
	  struct

	* include/defines.h: Added some hierarchy_*_order #defines

	* src/o_attrib.c: Put in a very very lame lame lame hack in 
	  o_attrib_search_name_partial which should be taken out and shot.
	  It better be removed when I fix the pin#=# problems
