@@ -8,6 +8,11 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+2000-11-21  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* include/struct.h: Added netconn_rubberband variable to st_toplevel
+	  structure
+
 2000-11-16  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/s_nethash.c: Added creation function (from 
